--- a/5febrero.htm
+++ b/5febrero.htm
@@ -29,7 +29,9 @@ MM_reloadPage(true);
 </head>
 
 <body>
-<div id="Layer1" style="position:absolute; left:258px; top:82px; width:636px; height:246px; z-index:1"><img src="5%20de%20febrero.jpg" width="638" height="317"></div>
+<div id="Layer1" style="position:absolute; left:258px; top:82px; width:636px; height:246px; z-index:1">
+  <div align="center"><img src="5%20de%20febrero.jpg" width="638" height="317"></div>
+</div>
 <div align="center" class="style1">5 de Febrero &quot;Constituci&oacute;n Politica de M&eacute;xico&quot;
 </div>
 </body>
