--- a/Pass2.htm
+++ b/Pass2.htm
@@ -13,7 +13,7 @@ UserID and Password*/
 function pasuser(form) {
 if (form.id.value=="Axel") { 
 if (form.pass.value=="1234") {              
-location="bienvenidos.htm" 
+location="index.html" 
 } else {
 alert("Invalid Password")
 }
