--- a/rojo.htm
+++ b/rojo.htm
@@ -1,7 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-<head>
+<head><script type="text/javascript" language="JavaScript" src="flipmenu.js">
+
+/***********************************************
+* Flip Menu- by Osem Websystems (http://www.osem.nl/)
+* Visit JavaScript Kit at http://www.javascriptkit.com/ for this script and 100s more
+***********************************************/
+
+</script>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>Untitled Document</title>
 <style type="text/css">
@@ -15,15 +22,44 @@ body {
 }
 .style2 {color: #FFFFFF}
 -->
-</style></head>
+</style>
+<script language="JavaScript" type="text/JavaScript">
+<!--
+function MM_reloadPage(init) {  //reloads the window if Nav4 resized
+  if (init==true) with (navigator) {if ((appName=="Netscape")&&(parseInt(appVersion)==4)) {
+    document.MM_pgW=innerWidth; document.MM_pgH=innerHeight; onresize=MM_reloadPage; }}
+  else if (innerWidth!=document.MM_pgW || innerHeight!=document.MM_pgH) location.reload();
+}
+MM_reloadPage(true);
+//-->
+</script>
+</head>
 
 <body>
-<p class="style1"><a href="Curriculum.htm" target="mainFrame">Curriculum</a></p>
-<p class="style1"><a href="Pasatiempos.htm" target="mainFrame">Pasatiempos</a></p>
-<p class="style2"><a href="Otras%20P&#225;ginas.htm" target="mainFrame">Otras P&aacute;ginas</a></p>
-<p class="style2"><a href="Contacto.htm" target="mainFrame">Contacto</a></p>
-<p class="style2"><a href="Video%20UCAD.htm" target="mainFrame">Videos</a></p>
-<p class="style2"><a href="Radio%20UCAD.htm" target="mainFrame">M&uacute;sica</a></p>
-<p class="style2"><a href="verde.htm" target="mainFrame">Inicio</a></p>
+<div id="Layer1" style="position:absolute; left:15px; top:9px; width:90px; height:108px; z-index:1"></div>
+<p class="style1">&nbsp;</p>
+<p class="style1">&nbsp;</p>
+
 </body>
-</html>
+</html><ul class="flipMenu">
+<li>Practicas
+    <ul>
+   	<li><a href="Curriculum.htm" target="mainFrame">Curriculum</a></li>
+   	<li><a href="Pasatiempos.htm" target="mainFrame">Pasatiempos</a></li>
+   	<li><a href="Otras Páginas.htm" target="mainFrame">Otras Páginas</a></li>
+   	<li><a href="Contacto.htm" target="mainFrame">Contacto</a></li>
+    <li><a href="Video UCAD.htm" target="mainFrame">Videos</a></li>
+    <li><a href="Candelaria.htm" target="mainFrame">Candelaria</a></li>
+	<li><a href="5febrero.htm" target="mainFrame">5 de Febrero</a></li>
+	<li><a href="verde.htm" target="mainFrame">Inicio</a></li>
+    </ul>
+</li>
+<li>
+        <ul>
+								
+								</ul>
+				</li>
+    </ul>
+</li>
+
+</ul>
